Kubernetes/K8S/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend      # This service type mentioned in api calling in frontend vite.config.js file
  namespace: devboard
  labels:
    app: devboard-backend 

spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-backend

  template:
    metadata:
      labels:
        app: devboard-backend

    spec:
      containers:
      - name: devboard-backend-application
        image: devboard-backend:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
       
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 15

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
