Kubernetes/K8S/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: devboard
  labels:
    app: devboard-postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-postgres

  template:
    metadata:
      labels:
        app: devboard-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

            - name: data
              mountPath: /var/lib/postgresql

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)
            initialDelaySeconds: 25
            periodSeconds: 15

      volumes:
        - name: init
          configMap:
            name: configmapfile-devboard

        - name: data
          persistentVolumeClaim:
            claimName: persistant-pvc
