Kubernetes/K8S/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: devboard
  labels:
    app: devboard-postgres

spec:
  serviceName: postgres
  replicas: 2

  selector:
    matchLabels:
      app: devboard-postgres

  template:
    metadata:
      labels:
        app: devboard-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true

            - name: data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)
            initialDelaySeconds: 25
            periodSeconds: 15

      volumes:
        - name: init
          configMap:
            name: configmapfile-devboard

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: manual
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 500Mi
