Kubernetes/K8S/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend 
  namespace : devboard
spec:
  selector:
    app : devboard-backend  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
