Kubernetes/K8S/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devboard-route
  namespace: devboard
spec:
  parentRefs:
    - name: devboard-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: devboard-fronted-service
          port: 8090
